fix(MessageContent): add word-break rule to fix text message overflow

--- a/src/components/MessageContent/Text/Text.css
+++ b/src/components/MessageContent/Text/Text.css
@@ -14,4 +14,5 @@
   font-size: var(--message-text-font-size);
   line-height: 1.3;
   color: var(--message-text-color);
+  word-break: break-word;
 }
